pre initialization stage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>Roshan Dash</title>
+</head>
+<body>
+
+<h1>You've landed on the right page! It is ROSHAN DASH's Homepage</h1>
+<p>Website Under construction.</p>
+You can temporarily contact me on 9954244712.
+If you try to prank call me, it ain't going to work cause I always have my internet switched on and it has truecaller dialer, beware.
+
+</body>
+</html>
