pre initialization stage

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
 <title>Roshan Dash</title>
 </head>
-<body>
+<body bgcolor="blue">
 
-<h1>You've landed on the right page! It is ROSHAN DASH's Homepage</h1>
-<p>Website Under construction.</p>
-You can temporarily contact me on 9954244712.
-If you try to prank call me, it ain't going to work cause I always have my internet switched on and it has truecaller dialer, beware.
+
+<h1 style="color:white;">You've landed on the right page! It is ROSHAN DASH's Homepage</h1>
+
+<h2>You can temporarily contact me on +91-9954244712.<br>
+If you try to prank call me, it ain't going to work cause I always have my internet switched on and it has truecaller dialer, beware.<br>
+I won't be available on Facebook. Alternate way of contacting me is dash.scibolt@gmail.com
+</h2>
+<hr>
+
+<h3>Student at IIT GUWAHATI</h3>
+<a href="http://www.iitg.ac.in">IIT GUWAHATI</a>
+<h2 style="color:red;"> Website Under construction. </h2>
 
 </body>
 </html>
