--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Roshan Dash</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+    <title>Roshan Dash</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="description" content="Index"/>
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+   	<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link href="style.css" rel="stylesheet" type="text/css" /> 
 </head>
-<body bgcolor="blue">
 
+<body>
+	<div style="margin-top:60px;">
+    <span class="head_label">Roshan Dash</span>
+    </div>
+    <h3>Sorry, this page is under development!</h3>
+    <!-- <img src="logo2.png" width="50%" style="opacity:0.9;"/><br /> -->
+    <a href="https://github.com/roshandash411">Github</a><br /><br />
 
-<h1 style="color:white;">You've landed on the right page! It is ROSHAN DASH's Homepage</h1>
+    <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a>
 
-<h2>You can temporarily contact me on +91-9954244712.<br>
-If you try to prank call me, it ain't going to work cause I always have my internet switched on and it has truecaller dialer, beware.<br>
-I won't be available on Facebook. Alternate way of contacting me is dash.scibolt@gmail.com
-</h2>
-<hr>
+    <h3>Student at <a href="http://www.iitg.ac.in">IIT GUWAHATI</a> <img src="iitg.png" width="4%" style="opacity:0.9;" href="http://www.iitg.ac.in"/> studying EEE.</h3>
 
-<h3>Student at IIT GUWAHATI</h3>
-<a href="http://www.iitg.ac.in">IIT GUWAHATI</a>
-<h2 style="color:red;"> Website Under construction. </h2>
-
+    <hr>
+    <h3>Contact at 9954244712</h3>
 </body>
+
 </html>
