--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <span class="head_label">Roshan Dash</span>
     </div>
     <h3>Sorry, this page is under development!</h3>
-    <!-- <img src="logo2.png" width="50%" style="opacity:0.9;"/><br /> -->
     <a href="https://github.com/roshandash411">Github</a><br /><br />
-
     <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a>
 
-    <h3>Student at <a href="http://www.iitg.ac.in">IIT GUWAHATI</a> <img src="iitg.png" width="4%" style="opacity:0.9;" href="http://www.iitg.ac.in"/> studying EEE.</h3>
+    <h3><a href="http://www.iitg.ac.in">
+  <img src="iitg.png" width="4%" style="opacity:1;"/>
+</a>Student at <a href="http://www.iitg.ac.in">IIT GUWAHATI</a>  studying EEE.</h3>
 
     <hr>
     <h3>Contact at 9954244712</h3>
 </body>
-
 </html>
