--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div style="margin-top:60px;">
     <span class="head_label">Roshan Dash</span>
     </div>
-    <h3>Sorry, this page is under development!</h3>
+    <h3>Sorry, this page is under development! Getting ready in a few days!!!</h3>
     <a href="https://github.com/roshandash411">Github</a><br /><br />
     <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a>
 
