--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <h3>Sorry, this page is under development! Getting ready in a few days!!!</h3>
     <a href="https://github.com/roshandash411">Github</a><br /><br />
     <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a>
+    <a href="/blog">BLOG</a>
 
     <h3><a href="http://www.iitg.ac.in">
   <img src="iitg.png" width="4%" style="opacity:1;"/>
