--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <h3>Sorry, this page is under development! Getting ready in a few days!!!</h3>
     <a href="https://github.com/roshandash411">Github</a><br /><br />
-    <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a>
+    <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a><br /><br />
     <a href="/blog">BLOG</a>
 
     <h3><a href="http://www.iitg.ac.in">
