--- a/index.html
+++ b/index.html
@@ -1,39 +1,71 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-    <title>Roshan Dash</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="description" content="Index"/>
-    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-   	<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-    <link href="style.css" rel="stylesheet" type="text/css" /> 
-    <!-- GOOGLE ANALYTICS -->
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!DOCTYPE html>
+<html lang="en">
 
-  ga('create', 'UA-80257988-1', 'auto');
-  ga('send', 'pageview');
+<head>
+  <!-- meta -->
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-</script>
+  <title>Roshan Dash</title>
+  <meta content="" name="keywords">
+  <meta content="" name="description">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+
+  <!-- Bootstrap CSS File -->
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Libraries CSS Files -->
+  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <link href="lib/hover/hover.min.css" rel="stylesheet">
+
+  <!-- Main Stylesheet File -->
+  <link href="css/style.css" rel="stylesheet">
+
+  <!-- Responsive css -->
+  <link href="css/responsive.css" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images/favicon.png">
+
 </head>
 
 <body>
-	<div style="margin-top:60px;">
-    <span class="head_label">Roshan Dash</span>
+  <!-- start section header -->
+  <div id="header" class="home">
+
+    <div class="container">
+      <div class="header-content">
+        <h1>I'm <span class="typed"></span></h1>
+        <p>hit me up at roshan@roshandash.com
+          <br>
+        <a href="https://github.com/roshandash411">Github : https://github.com/roshandash411</a>
+        <br>
+        <a href="https://www.linkedin.com/in/roshan-dash">LinkedIn : https://www.linkedin.com/in/roshan-dash</a>
+        </p>
+        <p style="font-size: 1.5rem">
+          Please forgive this bad website design. Coming up with a new one by Aug 1st,2020. 
+        </p>
+      </div>
     </div>
-    <h3>Sorry, this page is under development! Getting ready in a few days!!!</h3>
-    <a href="https://github.com/roshandash411">Github</a><br /><br />
-    <a href="mailto:dash.scibolt@gmail.com"><i>dash.scibolt@gmail.com</i></a><br /><br />
-    <a href="/blog">BLOG</a>
-	
+  </div>
+  <!-- End section header -->
 
-    <h3><a href="http://www.iitg.ac.in">
-  <img src="iitg.png" width="4%" style="opacity:1;"/>
-</a>Student at <a href="http://www.iitg.ac.in">IIT GUWAHATI</a>  studying EEE.</h3>
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/typed/typed.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="lib/magnific-popup/magnific-popup.min.js"></script>
+  <script src="lib/isotope/isotope.pkgd.min.js"></script>
 
-    <hr>
-    <h3>Contact at 9954244712</h3>
+  <!-- Template Main Javascript File -->
+  <script src="js/main.js"></script>
+
 </body>
+
 </html>
